--- a/src/pages/ForecastPage/ForecastPage.module.scss
+++ b/src/pages/ForecastPage/ForecastPage.module.scss
@@ -1,8 +1,8 @@
 @import '../../scss/colors';
 @import '../../scss/mixins';
 
-.profile {
-  max-width: 320px;
+.forecast {
+  max-width: 450px;
   width: 100%;
   margin: 0 auto;
   padding: 20px;
@@ -11,11 +11,10 @@
   border-radius: 10px;
 
   .heading {
+    padding: 0 0 10px 0;
+    margin: 0 0 10px 0;
     text-align: center;
-    @include text-styles(16px, 400, uppercase, $text-01)
-  }
-
-  .info-box {
-
+    border-bottom: 1px solid $text-01;
+    @include text-styles(16px, 600, uppercase, $text-01)
   }
 }
