--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -14,6 +14,8 @@
   border-radius: 10px;
 
   .form {
+    max-width: 350px;
+    width: 100%;
     .input-group {
       display: flex;
       justify-content: center;
@@ -21,6 +23,7 @@
       flex-direction: column;
 
       .input-box input {
+        width: 100%;
         margin-top: 5px;
         padding: 5px;
         border: none;
