--- a/src/ui/Button/Button.module.scss
+++ b/src/ui/Button/Button.module.scss
@@ -16,3 +16,15 @@
     background-color: $text-01-hover;
   }
 }
+
+.button-cold {
+  color: $background-cold;
+}
+
+.button-warm {
+  color: $background-warm;
+}
+
+.button-hot {
+  color: $background-hot;
+}
