--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,6 +1,5 @@
 .app {
     .content {
-        height: 76vh;
         background-image: url('assest/images/background-01.jpg');
         background-position: center;
         background-repeat: no-repeat;
@@ -12,10 +11,11 @@
         }
 
         .container {
+            height: 76vh;
             max-width: 1024px;
             width: 100%;
             margin: 0 auto;
-            padding: 12%;
+            padding-top: 50px;
         }
     }
 }
