--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -5,6 +5,7 @@
   padding: 20px 0;
   background-color: $text-02;
   border-top: 2px solid $text-01;
+  transition: all 0.5s ease;
 
   .container {
     max-width: 1024px;
@@ -14,4 +15,16 @@
     justify-content: center;
     align-items: center;
   }
+}
+
+.footer-cold {
+  background-color: $background-cold;
+}
+
+.footer-warm {
+  background-color: $background-warm;
+}
+
+.footer-hot {
+  background-color: $background-hot;
 }
