--- a/src/components/Weather/Weather.module.css
+++ b/src/components/Weather/Weather.module.css
@@ -68,7 +68,7 @@
     height: 50px;
     border: 2px solid #410079;
     border-radius: 5px;
-    background-image: url("../../assest/images/iconWind.png");
+    background-image: url("../../assest/images/icon-windy.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0 10px;
