--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -3,3 +3,8 @@ $text-01-hover: #124a3f;
 $text-01-background: #9dcaae;
 $text-02: #bad072;
 $text-02-hover: #fdfdfd;
+
+$background-neutral: #bad072;
+$background-cold: #4bbad2;
+$background-warm: #d9c82e;
+$background-hot: #fe9b26;
