--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -58,3 +58,15 @@
     }
   }
 }
+
+.login-cold {
+  background-color: $background-cold;
+}
+
+.login-warm {
+  background-color: $background-warm;
+}
+
+.login-hot {
+  background-color: $background-hot;
+}
