--- a/src/pages/ProfilePage/EditProfileForm/EditProfileForm.module.scss
+++ b/src/pages/ProfilePage/EditProfileForm/EditProfileForm.module.scss
@@ -30,3 +30,27 @@
     }
   }
 }
+
+.edit-cold {
+  .form {
+    .button-box button {
+      color: $background-cold;
+    }
+  }
+}
+
+.edit-warm {
+  .form {
+    .button-box button {
+      color: $background-warm;
+    }
+  }
+}
+
+.edit-hot {
+  .form {
+    .button-box button {
+      color: $background-hot;
+    }
+  }
+}
