--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,3 +1,5 @@
+@import './scss/colors';
+@import './scss/mixins';
 .app {
     .content {
         background-image: url('assest/images/background-01.jpg');
@@ -16,6 +18,30 @@
             width: 100%;
             margin: 0 auto;
             padding-top: 50px;
+        }
+    }
+}
+
+.app-cold {
+    .content {
+        .content-overlay {
+            background-color: rgba(75, 186, 210, 0.3%);
+        }
+    }
+}
+
+.app-warm {
+    .content {
+        .content-overlay {
+            background-color: rgba(217, 200, 46, 0.3%)
+        }
+    }
+}
+
+.app-hot {
+    .content {
+        .content-overlay {
+            background-color: rgba(254, 155, 38, 0.3%)
         }
     }
 }
