--- a/src/pages/ForecastPage/ForecastPage.module.scss
+++ b/src/pages/ForecastPage/ForecastPage.module.scss
@@ -9,6 +9,7 @@
   border: 1px solid $text-01;
   background-color: $text-02;
   border-radius: 10px;
+  transition: all 0.5s ease;
 
   .heading {
     padding: 0 0 10px 0;
@@ -17,4 +18,16 @@
     border-bottom: 1px solid $text-01;
     @include text-styles(16px, 600, uppercase, $text-01)
   }
+}
+
+.forecast-cold {
+  background-color: $background-cold;
+}
+
+.forecast-warm {
+  background-color: $background-warm;
+}
+
+.forecast-hot {
+  background-color: $background-hot;
 }
