--- a/src/pages/ForecastPage/SearchForm/SearchForm.module.scss
+++ b/src/pages/ForecastPage/SearchForm/SearchForm.module.scss
@@ -9,6 +9,7 @@
   border: 1px solid $text-01;
   background-color: $text-02;
   border-radius: 10px;
+  transition: all 0.5s ease;
 
   .form {
     .input-group {
@@ -43,6 +44,39 @@
           color: $text-02-hover;
           background-color: $text-01-hover;
         }
+      }
+    }
+  }
+}
+
+.search-form-cold {
+  background-color: $background-cold;
+  .form {
+    .input-group {
+      .submit-button {
+        color: $background-cold;
+      }
+    }
+  }
+}
+
+.search-form-warm {
+  background-color: $background-warm;
+  .form {
+    .input-group {
+      .submit-button {
+        color: $background-warm;
+      }
+    }
+  }
+}
+
+.search-form-hot {
+  background-color: $background-hot;
+  .form {
+    .input-group {
+      .submit-button {
+        color: $background-hot;
       }
     }
   }
