--- a/src/pages/ForecastPage/SearchResult/SearchResult.module.scss
+++ b/src/pages/ForecastPage/SearchResult/SearchResult.module.scss
@@ -5,6 +5,7 @@
   padding: 20px;
   border: 1px solid $text-01;
   border-radius: 10px;
+  transition: all 0.5s ease;
 
   .result__location {
     .location__section {
